kubernetes/django-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: django-web
  template:
    metadata:
      labels:
        app.kubernetes.io/name: django-web
    spec:
      containers:
      - name: django
        image: naseongjae/mycicddjango_ch11:7ff26ec
        ports:
        - containerPort: 8000

      - name: nginx
        image: naseongjae/mycicdnginx_ch11:b399c61
        ports:
        - containerPort: 80
