kubernetes/django-service.yml
apiVersion: v1
kind: Service
metadata:
  name: django-service
spec:
  selector:
    app.kubernetes.io/name: django-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
